# predicate-cracking

./: CMakeLists.txt  README.md
cracker/: bb.py  install-frida-and-run.cmd
src/: main.cpp
